--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/bcjaeger/aorsf/workflows/R-CMD-check/badge.svg)](https://github.com/bcjaeger/aorsf/actions)
 <!-- badges: end -->
 
-The goal of `aorsf` is to fit, interpret, and make predictions with oblique random survival forests (ORSFs).
+The goal of `aorsf` is to fit, interpret, and make predictions with oblique random survival forests (ORSFs). The 'a' in the title of `aorsf` stands for accelerated. So why do ORSFs need to be accelerated? Oblique decision trees are notoriously slow, and the issue of higher computation time is compounded by the fast that survival trees may also be slow. To make ORSF more accessible and able to engage with larger datasets, `aorsf` applies strategies to cut down computing time without sacrificing prediction accuracy.  
 
 ## Installation
 
