--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/bcjaeger/aorsf/workflows/R-CMD-check/badge.svg)](https://github.com/bcjaeger/aorsf/actions)
 <!-- badges: end -->
 
-The goal of `aorsf` is to fit, interpret, and make predictions with oblique random survival forests (ORSFs). The 'a' in the title of `aorsf` stands for accelerated. So why do ORSFs need to be accelerated? Oblique decision trees are notoriously slow, and the issue of higher computation time is compounded by the fast that survival trees may also be slow. To make ORSF more accessible and able to engage with larger datasets, `aorsf` applies strategies to cut down computing time without sacrificing prediction accuracy.  
+The goal of `aorsf` is to fit, interpret, and make predictions with oblique random survival forests (ORSFs). The 'a' in the title of `aorsf` stands for accelerated. So why do ORSFs need to be accelerated? Oblique decision trees are often more accurate but slower to fit compared to their axis-based counterparts. The issue of higher computation time is compounded for survival decision trees, which usually require more computing than classification or regression trees. To make ORSF more accessible and able to engage with larger datasets, `aorsf` applies strategies to cut down computing time without sacrificing prediction accuracy.  
 
 ## Installation
 
@@ -56,3 +56,6 @@ orsf_summarize_uni(object = fit, n_variables = 5)
 
 ```
 
+## References
+
+Byron C. Jaeger, D. Leann Long, Dustin M. Long, Mario Sims, Jeff M. Szychowski, Yuan-I Min, Leslie A. Mcclure, George Howard, Noah Simon (2019). Oblique Random Survival Forests. Ann. Appl. Stat. 13(3): 1847-1883. URL https://doi.org/10.1214/19-AOAS1261 DOI: 10.1214/19-AOAS1261
